feat(gui): 优化社区信息页面功能和样式
- 新增查询功能和直接修改表格功能
- 添加版权信息面板和加载动画- 优化按钮样式和布局- 增加输入验证和错误提示
- 重构数据库操作逻辑，提高代码复用性- 更新登录界面样式，使用配置文件中的颜色和字体设置
- 新增环境变量配置，支持自定义UI颜色和字体

--- a/src/configuration/resources/.env
+++ b/src/configuration/resources/.env
@@ -1,4 +1,17 @@
 name=PropGuardian
+# Database Configuration
 mysql=jdbc:mysql://mysql2.sqlpub.com:3307/prop_guardian
 user=prop_master
 password=FS0cXYWjEWQjAhi0
+
+# UI Color Configuration (Hex format)
+ui.primary.color=#007BFF
+ui.primary.hover.color=#0061C3
+ui.secondary.color=#2878E6
+ui.secondary.hover.color=#1E64C8
+ui.title.color=#1E5096
+ui.background.color=#F0F5FA
+
+# UI Font Configuration
+ui.font.name=微软雅黑
+ui.font.english.name=Arial
